k8s/clusters/glug-infra/conduit/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: conduit
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
